# artemis

./: .env.example  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
architecture/overview/: index.html
docs/: getting-started.md  index.md
docs/architecture/: overview.md
docs/guides/: bootstrap.md  database.md  migrating-from-fastapi.md  observability.md  quickstart.md  tenancy.md
docs/ops/: publishing.md  security.md
docs/reference/: api.md  cli.md  http.md
getting-started/: index.html
guides/database/: index.html
guides/observability/: index.html
guides/quickstart/: index.html
guides/tenancy/: index.html
ops/publishing/: index.html
ops/security/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/http/: index.html
search/: search_index.json
src/artemis/: __init__.py  application.py  audit.py  authentication.py  chatops.py  cli.py  codegen.py  config.py  database.py  dependency.py  events.py  exceptions.py  execution.py  golden.py  http.py  id57.py  middleware.py  migrations.py  models.py  observability.py  openapi.py  orm.py  quickstart.py  rbac.py  requests.py  responses.py  routing.py  serialization.py  server.py  static.py  tenancy.py  testing.py  typing_utils.py  websockets.py
src/artemis/domain/: __init__.py  quickstart_services.py  services.py
src/lxml/: __init__.pyi  etree.pyi
src/mere/: __init__.py  application.py  audit.py  authentication.py  bootstrap.py  cli.py  codegen.py  config.py  database.py  dependency.py  events.py  exceptions.py  execution.py  golden.py  http.py  id57.py  metadata.py  middleware.py  migrations.py  models.py  observability.py  openapi.py  orm.py  quickstart.py  rbac.py  requests.py  responses.py  routing.py  scaffold.py  serialization.py  server.py  static.py  tenancy.py  testing.py  websockets.py
src/mere/adapters/: fastapi.py
src/mere/domain/: __init__.py  bootstrap_services.py  quickstart_services.py  services.py
tests/: observability_stubs.py  support.py  test_app_database.py  test_application.py  test_asgi.py  test_audit.py  test_authentication.py  test_bootstrap.py  test_bootstrap_services.py  test_chatops.py  test_cli.py  test_codegen.py  test_compliance_gdpr.py  test_compliance_hipaa.py  test_compliance_iso27001.py  test_compliance_soc2.py  test_config.py  test_contracts.py  test_database.py  test_dependency.py  test_events.py  test_execution.py  test_fastapi_adapter.py  test_golden.py  test_http.py  test_id57.py  test_middleware.py  test_migrations.py  test_models.py  test_observability.py  test_openapi.py  test_orm.py  test_penetration.py  test_quickstart.py  test_quickstart_services.py  test_rbac.py  test_requests.py  test_responses.py  test_routing.py  test_scaffold.py  (+5 more)
tests/golden/: client.ts  openapi.json  recordings.json
