[project]
name = "artemis"
version = "0.1.0"
description = "Artemis asynchronous multi-tenant web framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Artemis Team" }]
requires-python = ">=3.11"
dependencies = [
    "granian>=1.5.0",
    "msgspec>=0.18.6",
    "rloop>=0.2.0",
    "rure>=0.2.0",
    "psqlpy>=0.11.0",
    "argon2-cffi>=23.1.0",
    "brotli>=1.1.0",
    "zstandard>=0.22.0",
]

[project.scripts]
artemis = "artemis.cli:main"

[tool.uv]
managed = true
package = true
dev-dependencies = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "coverage[toml]>=7.3",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "ty>=0.0.1a21",
]

[tool.uv.sources]

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--strict-config --strict-markers --cov=artemis --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["artemis"]

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC", "RUF"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
