[project]
name = "mere"
version = "0.1.0"
description = "Mere asynchronous multi-tenant web framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mere Team" }]
requires-python = ">=3.11"
dependencies = [
    "granian>=1.5.0",
    "msgspec>=0.18.6",
    "rloop>=0.2.0",
    "rure>=0.2.0",
    "psqlpy>=0.11.0",
    "argon2-cffi>=23.1.0",
    "brotli>=1.1.0",
    "zstandard>=0.22.0",
    "cedarpy>=4.1.0",
    "id57>=1.0.0",
    "cryptography>=42.0.5",
    "lxml>=6.0.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]

[project.scripts]
mere = "mere.cli:main"
quality = "mere.cli:quality"

[tool.uv]
managed = true
package = true
dev-dependencies = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "coverage[toml]>=7.3",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "ty>=0.0.1a21",
    "mkdocs>=1.5",
    "mkdocs-shadcn>=0.9.5",
    "mkdocstrings[python]>=0.24",
    "fastapi>=0.110",
]

[tool.uv.sources]

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--strict-config --strict-markers --cov=mere --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["mere"]

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC", "RUF"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
